# vmi-honeymon

./: .autotools  .cproject  .gitignore  .project  Makefile.am  configure.ac  scanlist.conf  scanschedule.conf
scripts/: rpc-client.pl  run_valgrind.sh  valgrind.supp  vt.pl
src/: Makefile.am  file_extractor.c  file_extractor.h  guestfs_helper.c  guestfs_helper.h  honeypots.c  honeypots.h  injector.c  injector.h  input_parser.c  input_parser.h  log.c  log.h  log_mysql.c  log_mysql.h  main.c  md5.c  md5.h  pooltag.c  pooltag.h  rpc_server.c  rpc_server.h  scan.c  scan.h  structures.h  tcp_listener.c  tcp_listener.h  vmi-honeymon.c  vmi-honeymon.h  vmi-poolmon.c  vmi-poolmon.h  vmi.c  vmi.h  win-guid.c  win-guid.h  win-handles.c  win-handles.h  win-syms.c  win-syms.h  win7_sp1_x64_config.h  (+3 more)
src/win7_sp1_x64/: AUDIOENG.h  AcGenral.h  AcLayers.h  COLORCNV.h  CertEnroll.h  ClusApi.h  DUser.h  ESENT.h  ExplorerFrame.h  FXSST.h  FirewallAPI.h  FunDisc.h  IEUI.h  ImgUtil.h  MFPLAT.h  MFPMP.h  MMDevAPI.h  MP43DECD.h  MPSSVC.h  MSSHooks.h  MTxOCI.h  MediaMetadataHandler.h  MsCtfMonitor.h  NlsData0000.h  NlsData0007.h  NlsData000a.h  NlsData000c.h  NlsData0011.h  NlsData001D.h  NlsData0416.h  PNGFilt.h  PhotoMetadataHandler.h  PlaySndSrv.h  PortableDeviceApi.h  PortableDeviceTypes.h  RacEngn.h  RpcRtRemote.h  SPINF.h  SQLSRV32.h  SearchFilterHost.h  (+195 more)
src/win7_sp1_x86/: AcLayers.h  ActXPrxy.h  AltTab.h  AudioSes.h  AudioSrv.h  AuxiliaryDisplayApi.h  CertEnroll.h  ClusApi.h  DUI70.h  ES.h  ESENT.h  EhShell.h  EhUI.h  ElsCore.h  ExplorerFrame.h  FXSST.h  FunDisc.h  HotStartUserAgent.h  ImgUtil.h  InkDiv.h  Input.h  JSPROXY.h  MCEWMDRMNDBootstrap_notestroot.h  MFPMP.h  MSVidCtl.h  MSWMDM.h  MTxOCI.h  MsPbda.h  NetworkExplorer.h  NlsData0009.h  OobeFldr.h  PhotoMetadataHandler.h  PlaySndSrv.h  PolicMan.h  PortableDeviceTypes.h  PresentationHostDLL.h  Query.h  RacEngn.h  RpcEpMap.h  SearchFolder.h  (+281 more)
tools/: Makefile.am  magic-test-file.c  vt.pl
tools/magic-test/: Makefile.am
tools/windows_sym_finder/: README  createConfig.py  downloadPDB.py  symlookup.py  test.c
